# cloakpipe

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  cloakpipe.toml  install.sh
.copilot-tracking/changes/: 20260525-interactive-policy-command-changes.md  20260525-missing-creds-pii-coverage-changes.md  20260526-global-config-model-audit-session-changes.md  20260528-llm-http-proxy-mode-changes.md
.copilot-tracking/details/: 20260525-interactive-policy-command-details.md  20260525-missing-creds-pii-coverage-details.md  20260526-global-config-model-audit-session-details.md  20260528-llm-http-proxy-mode-details.md
.copilot-tracking/plans/: 20260525-interactive-policy-command-plan.instructions.md  20260525-missing-creds-pii-coverage-plan.instructions.md  20260526-global-config-model-audit-session-plan.instructions.md  20260528-llm-http-proxy-mode-plan.instructions.md
.copilot-tracking/research/: 20260528-llm-http-proxy-mode-research.md  (+3 more)
assets/: cloakpipe-demo.cast  example.md  generate_cast.py
benchmarks/: e2e_quality_test.py  test-config.toml
crates/cloakpipe-mcp/: Cargo.toml
crates/cloakpipe-mcp/src/: lib.rs
crates/cloakpipe-proxy/: Cargo.toml
crates/cloakpipe-proxy/src/: handlers.rs  http_proxy.rs  json_filter.rs  lib.rs  llm_http.rs  outbound_proxy.rs  routing.rs  server.rs  state.rs  streaming.rs  tls_mitm.rs  tree_handlers.rs
crates/cloakpipe-proxy/src/admin/: audit.rs  categories.rs  mod.rs  policies.rs  profiles.rs  system.rs  vault.rs
crates/cloakpipe-proxy/tests/: admin_api.rs  http_proxy.rs  privacy_api.rs
docs/: ARCHITECTURE.md  api.md  mcp.md  tree.md
policies/: README.md  default.toml  dpdp.toml  gdpr.toml  hipaa.toml  minimal.toml  pci-dss.toml
scripts/: build-admin-ui.mjs
tools/: convert_onnx.py  download_model.sh
(+78 files in other folders)
