[package]
name = "cloakpipe-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible HTTP proxy with privacy middleware"

[dependencies]
cloakpipe-core = { path = "../cloakpipe-core", version = "0.15.0", features = ["gliner-pii", "ner"] }
cloakpipe-audit = { path = "../cloakpipe-audit", version = "0.15.0" }
cloakpipe-tree = { path = "../cloakpipe-tree", version = "0.15.0" }
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
http-body-util.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
